--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Happy birthday to you!! Yeee! Many many happy blah...</p>
+        <p class="hbd-chatbox">Happy birthday Radha!! Yeee! Many many happy returns of the day....</p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
@@ -46,7 +46,7 @@
       <img src="img/rr.jpg" alt="" class="lydia-dp" id="imagePath">
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the God always be with you! ;)</h5>
+        <h5 id="wishText">May the God always be with you! I hope you become the most successful person and achieve all your dreams ;)</h5>
       </div>
     </div>
     <div class="seven">
@@ -116,7 +116,7 @@
       </svg>
     </div>
     <div class="nine">
-      <p>I hope you liked it.</p>
+      <p>I hope you liked it. Enjoy and make yourself proud !!</p>
       <p id="replay">Click, if you want to watch it again.</p>
       <p class="last-smile">:)</p>
     </div>
