--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Happy birthday Radha!! Yeee! Many many happy returns of the day....</p>
+        <p class="hbd-chatbox">Happy birthday Radha!!Many many happy returns of the day..</p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
